<resources>
    <string name="app_name">OurMarket</string>
    <string name="button">Button</string>
    <string name="title_activity_main_tabs">MainTabsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="save">save</string>
</resources>
